@@ -56,7 +56,7 @@ class BinaryPackageBuildManager(DebianBuildManager):
             raise ValueError, files
 
         self.archive_purpose = extra_args.get('archive_purpose')
-        self.suite = extra_args.get('suite')
+        self.suite = extra_args['suite']
         self.component = extra_args['ogrecomponent']
         self.arch_indep = extra_args.get('arch_indep', False)
         self.build_debug_symbols = extra_args.get('build_debug_symbols', False)
@@ -67,14 +67,9 @@ class BinaryPackageBuildManager(DebianBuildManager):
     def doRunBuild(self):
         """Run the sbuild process to build the package."""
         args = ["sbuild-package", self._buildid, self.arch_tag]
-        if self.suite:
-            args.extend([self.suite])
-            args.extend(self._sbuildargs)
-            args.extend(["--dist=" + self.suite])
-        else:
-            args.extend(['autobuild'])
-            args.extend(self._sbuildargs)
-            args.extend(["--dist=autobuild"])
+        args.extend([self.suite])
+        args.extend(self._sbuildargs)
+        args.extend(["--dist=" + self.suite])
         if self.arch_indep:
             args.extend(["-A"])
         if self.archive_purpose:
